chore: fixed white space issues

--- a/src/features/components/templates/hero-banners/product/product-hero.module.scss
+++ b/src/features/components/templates/hero-banners/product/product-hero.module.scss
@@ -13,7 +13,7 @@
     }
     @media only screen and (min-width: 1920px) {
         min-block-size: 100%;
-        block-size: 150rem;
+        block-size: 110rem;
     }
     &::before {
         content: ' ';
